<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.talaatmagdy.colorchange.MainActivity">

    <LinearLayout
        android:layout_width="143dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/linearLayout">

        <Button
            android:onClick="action"
            android:id="@+id/b1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colora" />

        <Button
            android:onClick="action"
            android:id="@+id/b2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colorb" />

        <Button
            android:onClick="action"
            android:id="@+id/b3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colorc" />

        <Button
            android:onClick="action"
            android:id="@+id/b4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colord" />

        <Button
            android:onClick="action"
            android:id="@+id/b5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colore" />

        <Button
            android:id="@+id/b6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colorf" />

        <Button
            android:id="@+id/b7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colorg" />

        <Button
            android:id="@+id/b8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colorh" />

        <Button
            android:id="@+id/b9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colorJ" />

        <Button
            android:id="@+id/b10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colorM" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintRight_toLeftOf="@+id/linearLayout"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.example.talaatmagdy.colorchange.colorA"
            android:id="@+id/fr1"
            ></fragment>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
